# team6-mon-spring26

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  DEVELOPMENT.md  README.md  todo
duesanddos/: .coveragerc  .coveralls.yml  .ebignore  .env.example  .gitignore  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt  test_black.py
duesanddos/.ebextensions/: 01-migrate.config  django.config
duesanddos/.elasticbeanstalk/: .config.yml  config.yml
duesanddos/accounts/: adapters.py  admin.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
duesanddos/accounts/migrations/: 0001_initial.py  0002_profile.py  0003_household.py  0003_profile_google_avatar_url.py  0004_household_remove_profile_google_avatar_url_and_more.py  (+14 more)
duesanddos/activities/: context_processors.py  google_calendar.py  models.py  signals.py  urls.py  views.py
duesanddos/backend/: requirements.txt
duesanddos/chat/: admin.py  context_processors.py  models.py  services.py  urls.py  views.py
duesanddos/chats/: __init__.py
duesanddos/chores/: admin.py  apps.py  forms.py  models.py  signals.py  test_management.py  test_signals.py  tests.py  tests_pagination.py  urls.py  views.py
duesanddos/duesanddos/: asgi.py  custom_storages.py  settings.py  tests.py  urls.py  wsgi.py
duesanddos/expenses/: models.py  urls.py  views.py
duesanddos/frontend/: .env.example
duesanddos/households/: models.py  urls.py  views.py
duesanddos/insights/: tests.py  views.py
duesanddos/login/: views.py
duesanddos/users/: admin.py  forms.py  models.py  urls.py  views.py
(+137 files in other folders)
